--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 	body
 	{
-		font-family: 'Source Sans Pro';
+		font-family: "Poppins", sans-serif;
 		font-weight: 300;
 		background: #252122;
 		background-image: url('images/bg02.png');
